# jeebox

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
Cpp/: JB.cpp  JB.h  export.sym
Cpp/LibSrc/: JB_Alloc.cpp  JB_Alloc.h  JB_BasicIO.cpp  JB_BasicTypes.h  JB_ByteArray.h  JB_ByteMap.cpp  JB_ByteMap.h  JB_Date.cpp  JB_Date.h  JB_Dict.h  JB_DictCore.h  JB_Dictionary.cpp  JB_DirReaderUnix.cpp  JB_DirReaderWin32.cpp  JB_Errors.cpp  JB_Errors.h  JB_FastString.cpp  JB_FastString.h  JB_File.cpp  JB_File.h  JB_GameAll.h  JB_Lib.cpp  JB_LibTypes.h  JB_LibraryFile.cpp  JB_Linkage.h  JB_List.cpp  JB_MSR.cpp  JB_Math.cpp  JB_Math.h  JB_MemUtils.h  JB_ObjArray.cpp  JB_ObjArray.h  JB_PNG.cpp  JB_Pipe.cpp  JB_Pipe.h  JB_RingTree.cpp  JB_RingTree.h  JB_SafeIncludes.h  JB_Saveable.cpp  JB_String.cpp  (+20 more)
Examples/: Jeebox.h  Users.box  alloc_speed.cpp  jb.cpp  jeebox_api.h  test.cpp  translation idea.txt  translation src.txt  users.cpp  xml.cpp
Examples/Test.xcodeproj/: project.pbxproj
Examples/Test.xcodeproj/project.xcworkspace/xcuserdata/theodore.xcuserdatad/: UserInterfaceState.xcuserstate
Examples/Test.xcodeproj/xcuserdata/theodore.xcuserdatad/xcschemes/: Test.xcscheme  xcschememanagement.plist
Jeebox.input copy/: Binary.spd  Constants.spd  Errors.spd  FreeWords.spd  JB_Api.spd  Message.spd  MessageReadable.spd  Parser.spd  ParserUtils.spd  Syntax.spd  Tests.spd  index.spd  licence.txt
